--- a/src/style/general.scss
+++ b/src/style/general.scss
@@ -1,10 +1,15 @@
 @import '/src/style/partial/variables';
 
 
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+img {
+    width: 100%;
 }
 
 body {
